@@ -188,4 +188,5 @@ BUGFIXES:
 171 ==> 380289 - Cannot write to Albums residing on NFS.
 172 ==> 384465 - With Compact Flash Card Created date in thumbnails is wrong.
 173 ==> 381958 - Cannot add additional collection.
-174 ==> 
+174 ==> 383747 - "Rotate only by setting a flag" Changes Image Instead.
+175 ==> 
